Fix collapse issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,7 +83,7 @@ p {
   .word-break{
     word-break: break-word;
   }
-  
+
   .scrollbar-none::-webkit-scrollbar {
     display: none !important;
     -webkit-appearance: none !important;
@@ -485,6 +485,12 @@ input[type='text'] + .input-group-btn span:nth-of-type(1) {
 }
 input[type='text'] + .input-group-btn span:nth-of-type(2) {
   @apply opacity-100;
+}
+
+@media(min-width: 992px){
+  .tablet-medium\:visible{
+    visibility: visible;
+  }
 }
 
 #checkout-personal-information-step.checkout-step
